--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <permission android:name="com.sunshine.popularmovies.LICENSE_TO_KILL"
+        android:protectionLevel="dangerous"
+        android:label="Licensed to Kill"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:fullBackupContent="true"
         android:largeHeap="true">
         <activity android:name=".activity.MainActivity"
             android:theme="@style/AppTheme">
@@ -43,9 +48,7 @@
         </provider>
 
     </application>
-    <permission android:name="com.sunshine.popularmovies.LICENSE_TO_KILL"
-        android:protectionLevel="dangerous"
-        android:label="Licensed to Kill"/>
+
 
 
 </manifest>
