--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.jakewharton:butterknife:8.1.0'
-    compile 'com.bignerdranch.android:recyclerview-multiselect:+'
+    compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
 }
