--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
 }
