--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <!-- Permissions required by the sync adapter -->
+    <uses-permission
+        android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission
+        android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission
+        android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
     <permission android:name="com.sunshine.popularmovies.LICENSE_TO_KILL"
         android:protectionLevel="dangerous"
         android:label="Licensed to Kill"/>
@@ -40,13 +47,37 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity"/>
         </activity>
+        <!--<service android:name=".service.MovieService"/>-->
+        <!--<receiver android:name=".service.MovieService$AlarmReceiver"/>-->
+
+        <!-- SyncAdapter's dummy authentication service -->
+        <service
+            android:name=".sync.MovieAuthenticatorService"
+            >
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
         <provider
-            android:authorities="com.sunshine.popularmovies"
+            android:authorities="@string/content_authority"
             android:name=".data.MovieProvider"
-            android:enabled="true"
+            android:exported="false"
+            android:syncable="true" />
+        <!-- The SyncAdapter service -->
+        <service
+            android:name=".sync.MovieSyncService"
             android:exported="true"
-            android:permission="com.sunshine.popularmovies.LICENSE_TO_KILL">
-        </provider>
+            >
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
 
     </application>
 
