--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:23.4.0'
 }
